@@ -9,6 +9,9 @@
      - kill whitespace at EOL
      - new sentence, new line
      ssh pages ok markus@
+   - deraadt@cvs.openbsd.org 2003/06/10 22:20:52
+     [packet.c progressmeter.c]
+     mostly ansi cleanup; pval ok
 
 
 20030609
